--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,9 @@
     {
       "src": "main.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" },
+      "installCommand": "pip install -r requirements.txt",
+      "buildCommand": "echo 'No build command needed for Python API'"
     }
   ],
   "routes": [
