--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,7 @@
     {
       "src": "main.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" },
-      "installCommand": "pip install -r requirements.txt",
-      "buildCommand": "echo 'No build command needed for Python API'"
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }
   ],
   "routes": [
